# MCP_With_Cedar

./: .gitignore  .mcp.json  Procfile  README.md  railway.json  requirements.txt
.claude/: settings.local.json
cedar-test/: DEPLOYMENT.md  Procfile  README.md  cedar_agentic_server.py  pyproject.toml  railway.json  requirements.txt  semantic_search_setup.md  simple_mcp_server.py  supabase_semantic_search_setup.sql  test_semantic_search.py  test_spells_specialist.py  test_web_server.py  web_server_fastapi.py  web_server_fastapi_sse_fix.py
cedar-test/cedar_mcp/: __init__.py  __main__.py  server.py  shared.py  web_server.py
cedar-test/cedar_mcp/docs/: CEDAR_CLI_CONTEXT.md  mastra_search.md
cedar-test/cedar_mcp/prompts/: templates.py
cedar-test/cedar_mcp/services/: clarify.py  docs.py  feature.py  mastra_docs.py  semantic_search.py  voice.py  wizard.py
cedar-test/cedar_mcp/tools/: __init__.py  check_install.py  clarify_requirements.py  confirm_requirements.py  context_specialist.py  get_relevant_feature.py  integration_wizard.py  mastra_specialist.py  search_docs.py  search_mastra_docs.py  spells_specialist.py  voice_specialist.py
cedar-test/docs/: cedar_llms_full.txt  cedar_llms_full.txt.meta.json  mastra_llms_full.txt.meta.json
cedar-test/scripts/: fetch_llms_txt.py
